# workshop-video-search

./: .dockerignore  .gitignore  README.md  pyproject.toml  run.sh
backend/: .env.example  .env.production.example  Dockerfile.cpu  Dockerfile.gpu  pyproject.toml
backend/app/: main.py
backend/app/models/: search.py  summarization.py  video.py
backend/app/routes/: library.py  media.py  search.py  summarization.py  transcription.py
backend/app/services/: background_processor.py  llms.py  search.py  summarization.py  transcription.py  video_library.py
frontend/src/: App.tsx  index.css
frontend/src/components/: AddVideoModal.tsx  LLMDropdown.tsx  LoadingIndicatorButton.tsx  SearchPanel.tsx  SummarizationPanel.tsx  TranscriptionForm.tsx  TranscriptionResult.tsx  VideoLibrary.tsx  VideoPlayer.tsx  YouTubePlayer.tsx
frontend/src/services/: api.ts
frontend/src/types/: library.types.ts  search.types.ts  summarization.types.ts
learning-materials/: 01_digital_signal_processing.ipynb  pyproject.toml  requirements.txt
