[project]
name = "video-search-backend"
version = "0.1.0"
description = "Video Search Backend - FastAPI application for transcribing and searching video content"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi[standard]==0.115.9",
    "openai-whisper>=20231117",
    "yt-dlp[default]==2025.4.30",
    "sentence-transformers==4.1.0",
    "chromadb==1.0.9",
    "hf-xet==1.1.1",
    "accelerate==1.7.0",
    "bitsandbytes==0.42.0",
    "openai==1.91.0",
    "opencv-python==4.12.0.88",
    "sentencepiece==0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# Configure uv to handle platform-specific dependencies properly
index-strategy = "unsafe-best-match"
